# C-Notebooks

./: .gitignore  CMakeLists.txt  Exercise.md  README.md  notebook.md
chapter1/: 1-10.c  1-12.c  1-13.c  1-14.c  1-16.c  1-17.c  1-18-answer.c  1-18-improve1.c  1-18.c  1-19.c  1-20-answer.c  1-20.c  1-21.c  1-22.c  1-23.c  1-24.c  Chapter-1-10.c  Chapter-1-2.c  Chapter-1-5-4.c  Chapter-1-6.c  Chapter-1-7.c  Chapter-1-9.c  celsius_to_fahr.c  demo.txt  exercise1.c  fahr_to_celsius.c  print_file.c
the-c-program-design-2nd/: 1-10.c  1-12.c  1-13.c  1-14.c  1-8.c  1-9.c  README.md  demo.c  exercise1-6-arrays.c  exercise1-7-functions.c  word-count.c
the-c-program-design-2nd/chapter1/: 1-10.c  1-12.c  1-13.c  1-14.c  1-15.c  1-16.c  1-17.c  1-18.c  1-19.c  1-20.c  1-21.c  1-22.c  1-23.c  1-24.c  1-8.c  1-9.c
the-c-program-design-2nd/chapter2/: 2-1.c  2-10.c  2-2.c  2-3.c  2-4.c  2-5.c  2-6.c  2-7.c  2-8.c  2-9.c
the-c-program-design-2nd/example/chapter1/: 1-10-external.c  1-6-arrays.c  1-7-functions.c  1-9-char-arrays.c  external-const.h  word-count.c
the-c-program-design-2nd/example/chapter2/: atoi.c  getbits.c  squeeze.c  strcat.c
